# 5-axis-non-planar-rust-slicer-project

./: .gitignore  KNOWN_ISSUES.md  README.md  TECHNICAL.md  parse_nb.ps1
.claude/: settings.local.json
files/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md
files/multiaxis_slicer/: .gitignore  CURVED_SLICING_FIX.md  Cargo.toml  DEFORMED_GEOMETRY_FIX.md  DIAGNOSTIC_TEST.md  FACE_ORIENTATION_GUIDE.md  GUI_FEATURES.md  HARDWARE_RENDERING_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  PERFORMANCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RECOMMENDATION.md  ROTATION_CENTER_FIX.md  S3_SLICER_GUI_GUIDE.md  TESTING_INSTRUCTIONS.md  VIEWPORT_DEBUG.md  VIEWPORT_IMPROVEMENTS.md  VIEWPORT_SCALE_FIX.md
files/multiaxis_slicer/.cargo/: config.toml
files/multiaxis_slicer/docs/: FINAL_IMPLEMENTATION_SUMMARY.md  GUI_INTEGRATION_GUIDE.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  S3_SLICER_IMPLEMENTATION_GUIDE.md  TESTING_GUIDE.md
files/multiaxis_slicer/examples/: slice_benchy.rs
files/multiaxis_slicer/src/: conical.rs  contour_offset.rs  coordinate_transform.rs  gcode.rs  geodesic.rs  geometry.rs  lib.rs  mesh.rs  ruled_surface.rs  slicing.rs  toolpath.rs  toolpath_patterns.rs
files/multiaxis_slicer/src/gui/: app.rs  control_panel.rs  gcode_panel.rs  mod.rs  printer_profiles_page.rs  stats_panel.rs  theme.rs  viewport_3d.rs
files/multiaxis_slicer/src/motion_planning/: collision.rs  graph_search.rs  mod.rs  singularity.rs  variable_filament.rs
files/multiaxis_slicer/src/s3_slicer/: asap_deformation.rs  deformation.rs  deformation_v2.rs  heat_method.rs  isosurface.rs  isotropic_remesh.rs  marching_tet.rs  mod.rs  pipeline.rs  quaternion_field.rs  s4_rotation_field.rs  scalar_field.rs  tet_asap_deformation.rs  tet_dijkstra_field.rs  tet_mesh.rs  tet_point_location.rs  tet_quaternion_field.rs  tet_scalar_field.rs  voxel_remesh.rs
files/multiaxis_slicer/src/support_generation/: mod.rs  overhang_detection.rs  support_toolpath.rs  tree_skeleton.rs
non planar 5 axis files.bak/: MOTION_PLANNING_INTEGRATION.md  MOTION_PLANNING_PORT.md  mod.rs
non planar 5 axis files.bak/multiaxis_slicer/: Cargo.toml  MIGRATION.md  PROJECT_SUMMARY.md  setup.sh
non planar 5 axis files.bak/multiaxis_slicer/examples/: complete_pipeline.rs  simple_slicer.rs
non planar 5 axis files.bak/multiaxis_slicer/src/: centroidal_axis.rs  collision.rs  gcode.rs  geometry.rs  lib.rs  mesh.rs  ruled_surface.rs  singularity.rs  slicing.rs  toolpath.rs
non planar 5 axis files.bak/multiaxis_slicer/src/motion_planning/: collision.rs  graph_search.rs  singularity.rs
