[package]
name = "multiaxis_slicer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance 5-axis non-planar slicer"

[dependencies]
# Linear algebra and 3D math
nalgebra = { version = "0.32", features = ["serde-serialize"] }
nalgebra-sparse = "0.9"
sprs = "0.11"
glam = "0.24"

# Geometry and collision detection
parry3d = "0.13"

# Mesh I/O
stl_io = "0.7"

# Computational geometry
geo = "0.27"
spade = "2.9"

# Tetrahedral meshing (optional, AGPL via TetGen)
tritet = { version = "3.1", optional = true }

# Parallelism
rayon = "1.8"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Optimization
ordered-float = "4.2"

# GUI dependencies
egui = "0.29"
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow"] }
three-d = { version = "0.18", features = ["egui-gui"] }
tokio = { version = "1.36", features = ["full"] }
rfd = "0.14"
palette = "0.7"

[features]
default = ["tetgen"]
tetgen = ["tritet/with_tetgen"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

# Python bindings (optional, uncomment if needed)
# [dependencies.pyo3]
# version = "0.20"
# features = ["extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[profile.bench]
inherits = "release"
